--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <div class="next-demo-container">
+    <!-- <div class="next-demo-container">
         <style>
             .next-demo-btn {
                 position: fixed;
@@ -43,7 +43,7 @@
                 window.location.href = '../index.html';
             });
         </script>
-    </div>
+    </div> -->
 
     <!-- Top Navigation -->
     <div class="top-nav">
@@ -1227,5 +1227,6 @@
     <script src="script.js"></script>
 
 </body>
+
 
 </html>
